test/spec/br_if.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/br_if.wast
(;; STDOUT ;;;
assert_invalid error:
  out/third_party/testsuite/br_if.wast:171:41: type stack size too small at i32.ctz. got 0, expected at least 1
  (module (func $type-false-i32 (block (i32.ctz (br_if 0 (i32.const 0))))))
                                        ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:171:34: type stack at end of block is 1. expected 0
  (module (func $type-false-i32 (block (i32.ctz (br_if 0 (i32.const 0))))))
                                 ^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:175:41: type stack size too small at i64.ctz. got 0, expected at least 1
  (module (func $type-false-i64 (block (i64.ctz (br_if 0 (i32.const 0))))))
                                        ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:175:34: type stack at end of block is 1. expected 0
  (module (func $type-false-i64 (block (i64.ctz (br_if 0 (i32.const 0))))))
                                 ^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:179:41: type stack size too small at f32.neg. got 0, expected at least 1
  (module (func $type-false-f32 (block (f32.neg (br_if 0 (i32.const 0))))))
                                        ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:179:34: type stack at end of block is 1. expected 0
  (module (func $type-false-f32 (block (f32.neg (br_if 0 (i32.const 0))))))
                                 ^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:183:41: type stack size too small at f64.neg. got 0, expected at least 1
  (module (func $type-false-f64 (block (f64.neg (br_if 0 (i32.const 0))))))
                                        ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:183:34: type stack at end of block is 1. expected 0
  (module (func $type-false-f64 (block (f64.neg (br_if 0 (i32.const 0))))))
                                 ^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:188:40: type stack size too small at i32.ctz. got 0, expected at least 1
  (module (func $type-true-i32 (block (i32.ctz (br_if 0 (i32.const 1))))))
                                       ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:188:33: type stack at end of block is 1. expected 0
  (module (func $type-true-i32 (block (i32.ctz (br_if 0 (i32.const 1))))))
                                ^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:192:49: type mismatch at br_if condition. got i64, expected i32
  (module (func $type-true-i64 (block (i64.ctz (br_if 0 (i64.const 1))))))
                                                ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:192:40: type stack size too small at i64.ctz. got 0, expected at least 1
  (module (func $type-true-i64 (block (i64.ctz (br_if 0 (i64.const 1))))))
                                       ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:192:33: type stack at end of block is 1. expected 0
  (module (func $type-true-i64 (block (i64.ctz (br_if 0 (i64.const 1))))))
                                ^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:196:49: type mismatch at br_if condition. got f32, expected i32
  (module (func $type-true-f32 (block (f32.neg (br_if 0 (f32.const 1))))))
                                                ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:196:40: type stack size too small at f32.neg. got 0, expected at least 1
  (module (func $type-true-f32 (block (f32.neg (br_if 0 (f32.const 1))))))
                                       ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:196:33: type stack at end of block is 1. expected 0
  (module (func $type-true-f32 (block (f32.neg (br_if 0 (f32.const 1))))))
                                ^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:200:49: type mismatch at br_if condition. got i64, expected i32
  (module (func $type-true-f64 (block (f64.neg (br_if 0 (i64.const 1))))))
                                                ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:200:40: type stack size too small at f64.neg. got 0, expected at least 1
  (module (func $type-true-f64 (block (f64.neg (br_if 0 (i64.const 1))))))
                                       ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:200:33: type stack at end of block is 1. expected 0
  (module (func $type-true-f64 (block (f64.neg (br_if 0 (i64.const 1))))))
                                ^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:206:17: type stack size too small at br_if value. got 0, expected at least 1
    (block i32 (br_if 0 (i32.const 0)) (i32.const 1))
                ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:212:17: type stack size too small at br_if value. got 0, expected at least 1
    (block i32 (br_if 0 (i32.const 1)) (i32.const 1))
                ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:218:6: type stack at end of block is 1. expected 0
    (block (br_if 0 (i32.const 0) (i32.const 0)))
     ^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:224:6: type stack at end of block is 1. expected 0
    (block (br_if 0 (i32.const 0) (i32.const 1)))
     ^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:231:17: type stack size too small at br_if value. got 0, expected at least 1
    (block i32 (br_if 0 (nop) (i32.const 0)) (i32.const 1))
                ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:237:17: type stack size too small at br_if value. got 0, expected at least 1
    (block i32 (br_if 0 (nop) (i32.const 1)) (i32.const 1))
                ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:243:23: type mismatch at br_if value. got i64, expected i32
    (block i32 (drop (br_if 0 (i64.const 1) (i32.const 0))) (i32.const 1))
                      ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:249:23: type mismatch at br_if value. got i64, expected i32
    (block i32 (drop (br_if 0 (i64.const 1) (i32.const 0))) (i32.const 1))
                      ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:256:13: type stack size too small at br_if condition. got 0, expected at least 1
    (block (br_if 0 (nop)))
            ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:262:13: type mismatch at br_if condition. got i64, expected i32
    (block (br_if 0 (i64.const 0)))
            ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:268:17: type stack size too small at br_if value. got 0, expected at least 1
    (block i32 (br_if 0 (i32.const 0) (nop)) (i32.const 1))
                ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:274:17: type mismatch at br_if condition. got i64, expected i32
    (block i32 (br_if 0 (i32.const 0) (i64.const 0)) (i32.const 1))
                ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:274:6: type stack at end of block is 2. expected 1
    (block i32 (br_if 0 (i32.const 0) (i64.const 0)) (i32.const 1))
     ^^^^^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:280:39: label variable out of range (max 1)
  (module (func $unbound-label (br_if 1 (i32.const 1))))
                                      ^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:284:60: label variable out of range (max 3)
  (module (func $unbound-nested-label (block (block (br_if 5 (i32.const 1))))))
                                                           ^
assert_invalid error:
  out/third_party/testsuite/br_if.wast:288:37: label variable out of range (max 1)
  (module (func $large-label (br_if 0x10000001 (i32.const 1))))
                                    ^^^^^^^^^^
34/34 tests passed.
;;; STDOUT ;;)
